--- a/src/script/CMakeLists.txt
+++ b/src/script/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(lua_api)
 
 # Used by server and client
 set(common_SCRIPT_SRCS
+	${CMAKE_CURRENT_SOURCE_DIR}/ffi_for_lua.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/scripting_server.cpp
 	${common_SCRIPT_COMMON_SRCS}
 	${common_SCRIPT_CPP_API_SRCS}
