Add option to replace commonly used lua api functions with an implementation using LuaJIT's FFI library

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -746,6 +746,11 @@ else()
 		endif()
 	endif()
 
+	if(USE_LUAJIT)
+		# luajit ffi needs dynamic symbols
+		SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--dynamic-list=${PROJECT_SOURCE_DIR}/dynamic_list_file.txt")
+	endif()
+
 	if(MINGW)
 		set(OTHER_FLAGS "${OTHER_FLAGS} -mthreads -fexceptions")
 		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWIN32_LEAN_AND_MEAN")
