--- a/src/script/CMakeLists.txt
+++ b/src/script/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(common)
 add_subdirectory(cpp_api)
+add_subdirectory(ffi_api)
 add_subdirectory(lua_api)
 
 # Used by server and client
@@ -7,6 +8,7 @@ set(common_SCRIPT_SRCS
 	${CMAKE_CURRENT_SOURCE_DIR}/scripting_server.cpp
 	${common_SCRIPT_COMMON_SRCS}
 	${common_SCRIPT_CPP_API_SRCS}
+	${common_SCRIPT_FFI_API_SRCS}
 	${common_SCRIPT_LUA_API_SRCS}
 	PARENT_SCOPE)
 
